# pytorch-inference

./: .gitignore  .gitmodules  README.md
examples/: train.py  transform_model.py
examples/docs/: Docker Guide.doc
examples/models/: __init__.py  alexnet.py
examples/tools/: logger.py
makefile/cuda/: CMakeLists.txt
makefile/pytorch/: CMakeLists.txt  pytorch.sln  pytorch.vcxproj  pytorch.vcxproj.filters
makefile/tensorRT/classification/: CMakeLists.txt
makefile/tensorRT/detection/: CMakeLists.txt
pytorch/: CMakeLists.txt
pytorch/cu/: CMakeLists.txt  cuda_demo.cpp  pytorch_softmax.cu
pytorch/demo/: main.cpp
pytorch/inc/: pytorch_interface.h  pytorch_softmax.hpp
pytorch/include/: pytorch_softmax.hpp
pytorch/src/: pytorch_interface.cpp  pytorch_softmax.cpp
tensorRT/classification/: sampleMNIST.cpp  sampleOnnxMNIST.cpp
tensorRT/data/faster-rcnn/: faster_rcnn_test_iplugin.prototxt
tensorRT/detection/: sampleFasterRCNN.cpp
